--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -410,6 +410,7 @@ button {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    padding: 10px;
   }
   .card-text {
     font-size: 1.125rem;
@@ -957,6 +958,929 @@ Form
 //  }
 //}
 
+// <---------------------BUY/SELL STYLES ---------------------->
+
+// body .primary-header + div:not(.secondary-header), body .primary-header + section {
+//   margin-top: 130px;
+// }
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  .listing-page {
+    position: relative !important;
+    min-height: 200px;
+  }
+}
+.box{
+  display: none;
+}
+.alert {
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  button{
+    display: inline-block;
+    text-align: center;
+    align-items: flex-start;
+    border-radius: 0;
+    margin: 0;
+    overflow: visible;
+    text-transform: none;
+  }
+}
+.alert-warning {
+  color: #856404;
+  background-color: #fff3cd;
+  border-color: #ffeeba;
+}
+.alert-dismissible {
+  padding-right: 4.375rem;
+}
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+.close{
+  float: right;
+  font-size: 1.875rem;
+  font-weight: 700;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  opacity: .5;
+}
+button.close{
+  background-color: transparent;
+  border: 0;
+  -webkit-appearance: none;
+}
+.alert-dismissible .close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.75rem 1.25rem;
+  color: inherit;
+}
+.close:not(:disabled):not(.disabled) {
+  cursor: pointer;
+  z-index: 1;
+}
+// Filters
+div{
+  display: block;
+}
+#pet-subview {
+  height: auto;
+}
+.two-column-layout {
+  display: flex;
+  margin-bottom: 30px;
+  .left-col{
+    flex: 0 0 265px;
+  width: 265px;
+  }
+   .right-col {
+    flex: 1 1 auto;
+    padding: 0 30px;
+    padding-right: 0;
+    overflow: hidden;
+    display: inline-block;
+}
+}
+// .two-column-layout > .left-col {
+//   flex: 0 0 265px;
+//   width: 265px;
+// }
+.filter-sidebar {
+  background: white;
+  border-radius: 6px;
+  overflow: hidden;
+  border: 1px solid rgba(0, 0, 0, 0.14);
+  // height: 100%; container issue 
+  height: 1580px; 
+  padding-bottom: 15px;
+}
+.filter-sidebar .sidebar-header {
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  justify-content: space-between;
+  background-color: #3f3f3f;
+  color: white;
+  span i {
+    font-size: 16px;
+    margin-right: 10px;
+  }
+  a {
+    color: white;
+    font-size: 0.875rem;
+    text-decoration: none;
+      background-color: transparent;
+  }
+}
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+// .filter-sidebar .sidebar-header span i {
+//   font-size: 16px;
+//   margin-right: 10px;
+// }
+.fa-filter:before {
+  content: "\f0b0";
+}
+// .filter-sidebar .sidebar-header a {
+//   color: white;
+//   font-size: 0.875rem;
+//   text-decoration: none;
+//     background-color: transparent;
+// }
+.filter-sidebar .sidebar-box {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.14);
+  font-size: 0.875rem;
+  .sidebar-section-header {
+    padding: 8px 18px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 700;
+    color: #2d2d2d;
+  }
+  .sidebar-section-body {
+    padding: 0px 18px;
+  }
+}
+// .filter-sidebar .sidebar-box .sidebar-section-header {
+//   padding: 8px 18px;
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+//   cursor: pointer;
+//   font-size: 16px;
+//   font-weight: 700;
+//   color: #2d2d2d;
+// }
+.form-group {
+  margin-bottom: 1rem;
+}
+.input-group {
+  // position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 100%;
+  border-radius: 20px;
+  .icon-group {
+    position: relative;
+  }
+}
+
+input{
+  -webkit-rtl-ordering: logical;
+  cursor: text;
+  text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    text-align: start;
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-rendering: auto;
+    margin: 0;
+    overflow: visible;
+}
+.form-control {
+  color: #464646 !important;
+  appearance: none !important;
+  background-color: rgba(255, 255, 255, 0.9) !important;
+  display: block;
+    padding: 0.375rem 0.75rem;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
+  .input-group .form-control {
+    height: 43px;
+    position: relative;
+  // border-radius: 20px;
+  font-size: 16px !important;
+  line-height: 1.2;
+  flex: 1 1 auto;
+  width: 1%;
+  margin-bottom: 0;
+}
+.input-group-append {
+  margin-left: -1px;
+}
+.input-group-prepend, .input-group-append {
+  display: flex;
+}
+button{
+  align-items: flex-start;
+  margin: 0;
+  overflow: visible;
+  text-transform: none;
+  -webkit-appearance: button;
+}
+.btn{
+  display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.input-group .btn {
+  height: 43px;
+  border-radius: 20px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.2;
+  .icon-group .btn {
+    border-radius: 4px;
+    color: #404040;
+    opacity: 0.5;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+  }
+}
+.btn-link {
+  background-color: transparent;
+}
+.input-group.icon-group .btn {
+  border-radius: 4px;
+  color: #404040;
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+}
+.btn:not(:disabled):not(.disabled) {
+  cursor: pointer;
+}
+// idk wth is 
+.input-group > .input-group-append > .btn, .input-group > .input-group-append > .input-group-text, .input-group > .input-group-prepend:not(:first-child) > .btn, .input-group > .input-group-prepend:not(:first-child) > .input-group-text, .input-group > .input-group-prepend:first-child > .btn:not(:first-child), .input-group > .input-group-prepend:first-child > .input-group-text:not(:first-child) {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.fa-search:before {
+  content: "\f002";
+}
+select{
+  text-indent: 0px;
+    text-shadow: none;
+    text-align: start;
+    align-items: center;
+    white-space: pre;
+    -webkit-rtl-ordering: logical;
+    cursor: default;
+    margin: 0;
+    text-transform: none;
+}
+select:not(:-internal-list-box) {
+  overflow: visible !important;
+}
+.form-control{
+  font-size: 18px !important;
+  color: #464646 !important;
+  appearance: none !important;
+  background-color: rgba(255, 255, 255, 0.9) !important;
+  width: 100%;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+}
+select.form-control {
+  background-image: url(/assets/images/caret-down-black.svg);
+  background-position: center right 15px;
+  background-repeat: no-repeat;
+  padding-right: 35px;
+}
+.filter-sidebar .sidebar-box .form-control {
+  height: 37px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+option {
+  font-weight: normal;
+  display: block;
+  white-space: nowrap;
+  min-height: 1.2em;
+  padding: 0px 2px 1px;
+}
+option:disabled {
+  color: -internal-light-dark(graytext, rgb(170, 170, 170));
+}
+.filter-sidebar .sidebar-box .checkboxes {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+label{
+  display: inline-block;
+  cursor: default;
+}
+.custom-checkbox {
+  position: relative;
+  text-transform: uppercase;
+  font-weight: 400;
+  white-space: nowrap;
+  font-size: 0.875rem;
+    padding-left: 24px;
+    margin-bottom: 0px;
+    .checkmark {
+      width: 15px;
+      height: 15px;
+      top: 3px;
+      border: 1px solid #ced4da;
+    border-radius: 4px;
+    display: block;
+    position: absolute;
+    left: 0;
+    transition: all 0.2s ease 0s;
+  }
+}
+input{
+  color: -internal-light-dark(black, white);
+    letter-spacing: normal;
+    word-spacing: normal;
+    -webkit-rtl-ordering: logical;
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    display: none;
+    overflow: visible;
+}
+input[type="checkbox" i] {
+  background-color: initial;
+  cursor: default;
+  appearance: auto;
+  border: initial;
+}
+input[type="checkbox"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+.badge {
+  display: inline-block;
+  padding: 0.25em 0.4em;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.25rem;
+  background-color: rgba(65, 65, 65, 0.1);
+    font-size: 0.8125rem;
+    font-weight: 400;
+}
+span.text{
+  color: black;
+}
+h6 {
+  display: block;
+  margin-block-start: 2.33em;
+  margin-block-end: 2.33em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  margin-top: 0px;
+  line-height: 1.2;
+    color: inherit;
+    font-size: 0.875rem;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.text-uppercase {
+  text-transform: uppercase !important;
+}
+// right side 
+.cards-list-header {
+  background: white;
+  border: 1px solid #dddddd;
+  border-radius: 6px;
+  padding: 10px 24px;
+  margin-bottom: 12px;
+  .pets-list-header {
+    display: flex;
+    align-items: center;
+}
+.found-title {
+  font-size: 1.75rem;
+  color: #6d6d6d;
+  margin-bottom: 0px;
+    margin-right: auto;
+}
+.filter-row {
+  display: flex;
+  width: 100%;
+  .left-col {
+    margin-right: auto;
+    flex: 1;
+}
+}
+}
+.right-col .btn{
+    font-weight: 700;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    line-height: 1.5;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.btn-primary {
+  color: #fff;
+  background-color: #f84646;
+  border-color: #f84646;
+}
+.filter-btn {
+  font-size: 14px !important;
+  display: none !important;
+  float: right;
+    border-radius: 50px;
+    height: 32px;
+    margin-right: 12px;
+}
+.btn:not(:disabled):not(.disabled) {
+  cursor: pointer;
+}
+h2{
+  font-family: inherit;
+    font-weight: 700;
+    line-height: 1.2;
+    margin-top: 0;
+    display: block;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+.form-inline {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+}
+.control-with-label {
+  white-space: nowrap;
+}
+// @media (min-width: 576px){
+// .form-inline .form-group {
+//   display: flex;
+//   flex: 0 0 auto;
+//   flex-flow: row wrap;
+//   align-items: center;
+//   margin-bottom: 0;
+// }}
+.control-with-label label {
+  margin-right: 15px;
+  font-size: 0.875rem;
+  color: #a3a3a3;
+  cursor:default;
+  margin-bottom: 0px;
+}
+// @media (min-width: 576px){
+// .form-inline label {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     margin-bottom: 0;
+// }}
+select{
+text-align: start;
+align-items: center;
+    white-space: pre;
+    -webkit-rtl-ordering: logical;
+    cursor: default;
+    margin: 0;
+    text-transform: none;
+    .form-control {
+      background-image: url(/assets/images/caret-down-black.svg);
+      background-position: center right 15px;
+      background-repeat: no-repeat;
+      padding-right: 35px;
+  }
+}
+select:not(:-internal-list-box) {
+  overflow: visible !important;
+}
+.form-control {
+  font-size: 18px !important;
+  color: #464646 !important;
+  appearance: none !important;
+  background-color: rgba(255, 255, 255, 0.9) !important;
+    padding: 0.375rem 0.75rem;
+    line-height: 1.5;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    height: 32px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+// @media (min-width: 576px){
+// .form-inline .form-control {
+//     display: inline-block;
+//     width: auto;
+//     vertical-align: middle;
+// }}
+.right-col {
+  display: flex;
+  align-items:flex-start;
+}
+.btn{
+  display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1.25rem;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    text-transform: none;
+    line-height: 0;
+    margin-right: -0.75rem;
+    .btn-link {
+      font-weight: 400;
+      color: #f84646;
+      background-color: transparent;
+  }
+}
+button, html [type="button"], [type="reset"], [type="submit"] {
+  -webkit-appearance: button;
+}
+.btn:not(:disabled):not(.disabled) {
+  cursor: pointer;
+}
+.right-col .btn.active {
+  color: #f84646;
+}
+svg {
+  overflow: hidden;
+  vertical-align: middle;
+  fill: #f84646;
+}
+:not(svg) {
+  transform-origin: 0px 0px;
+}
+.btn-link {
+  font-weight: 400;
+  color: #f84646;
+  background-color: transparent;
+}
+.listing-page .views-box.active {
+  display: block;
+}
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  .p-card-landscape {
+    transition: all 0.2s ease 0s;
+    .img-box-main {
+      margin-right: 32px;
+  }
+}
+}
+div{
+  display: block;
+}
+.card-body {
+  flex: 1 1 auto;
+  padding: 0.5rem 0.8rem;
+}
+.media {
+  display: flex;
+  align-items: flex-start;
+}
+a {
+  color: #f84646;
+  text-decoration: none;
+  background-color: transparent;
+}
+.img-box{
+background-image: url(/assets/images/parrot.jpeg);
+  background-size: cover;
+  background-position: center center;
+  width: 128px;
+  height: 128px;
+  overflow: hidden;
+  border-radius: 6px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+  
+.mt-2{
+  margin-top: 0.5rem !important;
+}
+.mr-auto {
+  margin-right: auto !important;
+}
+.p-card-landscape .date-box {
+  color: #474747;
+  font-size: 0.75rem;
+  .media-body {
+    flex: 1;
+    overflow: hidden;
+}
+.media-body-header {
+  display: flex;
+  margin-bottom: 5px;
+  
+}
+}
+.left-box {
+  margin-right: auto;
+}
+a {
+  text-decoration: none;
+  background-color: transparent;
+}
+.card-title {
+  color: #474747;
+  font-weight: 700;
+  margin-top: -8px;
+  font-size: 1.45rem;
+  margin-bottom: 0.75rem;
+  padding: 10px;
+}
+.p-card-landscape .price-box {
+  font-size: 1.625rem;
+  font-weight: 700;
+  color: #474747;
+  opacity: 0.7;
+  line-height: 1.2;
+  white-space: nowrap;
+  float: right;
+  clear: both;
+}
+// @media (min-width: 768px){
+// .p-card-landscape .media-body-header .price-box {
+//     display: block;
+// }}
+.p-card-landscape .price-box span {
+  font-size: 1rem;
+}
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  margin-top: 0px;
+  margin-bottom: 1rem;
+}
+.p-card-landscape .card-text {
+  font-size: 0.8125rem;
+  min-height: 38px;
+  margin-bottom: 5px;
+  word-break: break-all;
+  padding: 10px;
+}
+ul {
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+.p-card-landscape .pet-feature-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  margin: 0px;
+  background-color: rgba(171, 171, 171, 0.1);
+  border-radius: 4px;
+  padding: 5px 10px;
+  justify-content: space-between;
+   li {
+    display: flex;
+    align-items: center;
+    font-size: 0.875rem;
+    padding: 0px 13px;
+}
+}
+li {
+  text-align: -webkit-match-parent;
+}
+img {
+  vertical-align: middle;
+  border-style: none;
+  margin-right: 6px
+}
+.p-card-landscape + .p-card-landscape {
+  margin-top: 10px;
+}
+// .listing-page .views-box {
+//   display: none;
+// }
+// .listing-page .cards-list-map-inner {
+//   display: flex;
+// }
+// .listing-page .cards-list-map-inner .left-side {
+//   flex: 0 0 336px;
+//   width: 336px;
+//   max-height: 754px;
+// }
+// .mCustomScrollbar.mCS_no_scrollbar {
+//   touch-action: auto;
+// }
+// .mCustomScrollBox {
+//   position: relative;
+//   overflow: hidden;
+//   height: 100%;
+//   max-width: 100%;
+//   outline: 0;
+//   direction: ltr;
+// }
+// .mCSB_container {
+//   overflow: hidden;
+//   width: auto;
+//   height: auto;
+//   margin-right: 16px;
+// }
+// .mCSB_scrollTools {
+//   position: absolute;
+//   width: 16px;
+//   height: auto;
+//   left: auto;
+//   top: 0;
+//   right: 0;
+//   bottom: 0;
+//   opacity: .75;
+//   transition: opacity .2s ease-in-out,background-color .2s ease-in-out;
+// }
+// .mCSB_scrollTools .mCSB_draggerContainer {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   bottom: 0;
+//   right: 0;
+//   height: auto;
+// }
+// .mCSB_scrollTools .mCSB_dragger {
+//   cursor: pointer;
+//   width: 100%;
+//   height: 30px;
+//   z-index: 1;
+// }
+// .mCSB_draggerContainer .mCSB_dragger_bar {
+//   background-color: #999999 !important;
+//   position: relative;
+//     width: 4px;
+//     height: 100%;
+//     margin: 0 auto;
+//     border-radius: 16px;
+//     text-align: center;
+//     transition: opacity .2s ease-in-out,background-color .2s ease-in-out;
+// }
+// .mCSB_scrollTools .mCSB_draggerRail {
+//   width: 2px;
+//   height: 100%;
+//   margin: 0 auto;
+//   border-radius: 16px;
+//   background-color: transparent !important;
+// }
+ul{
+  margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+.pagination {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+  border-radius: 0.25rem;
+}
+li{
+  display: list-item;
+    text-align: -webkit-match-parent;
+}
+.page-link {
+  position: relative;
+  display: block;
+  padding: 0.5rem 0.75rem;
+  line-height: 1.25;
+  margin-left: -1px;
+    border-top-left-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+    border: 1px solid #dee2e6;
+}
+// .page-item:first-child .page-link {
+//   margin-left: 0;
+//   border-top-left-radius: 0.25rem;
+//   border-bottom-left-radius: 0.25rem;
+// }
+.page-item.disabled .page-link {
+  color: #6c757d;
+  pointer-events: none;
+  cursor: auto;
+  background-color: #fff;
+  border-color: #dee2e6;
+}
+.page-item.active .page-link {
+  z-index: 1;
+  color: #fff;
+  background-color: #f84646;
+  border-color: #f84646;
+}
+.page-link:not(:disabled):not(.disabled) {
+  cursor: pointer;
+}
+a{
+  text-decoration: none;
+}
+.page-item:last-child .page-link {
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 //<------------------ FOOTER STYLES ---------------->
 .footer {
   background-color: #323232;
@@ -1076,3 +2000,4 @@ Form
   font-weight: 600;
   flex-wrap: wrap;
 }
+
